<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/backgraund_main_label"
        android:fontFamily="@font/faster_one"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_baglan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_device"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/backgraund_main_button"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/spin_coater_ncihaz_na_ba_lan"
        android:textColor="@android:color/background_light"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_devicedelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_baglan"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/backgraund_main_label"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/kay_tl_cihaz_nsil"
        android:textColor="@android:color/background_light"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/paytone_one"
        android:text="@string/kay_tl_cihaz_yok"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_bt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Red"
        android:layout_alignStart="@+id/listviewid"
        android:layout_marginTop="12dp"
        android:background="@drawable/backgraund_main_button"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/bluetooth_na_kapat"
        android:textColor="@android:color/background_light"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_ref"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Red"
        android:layout_alignEnd="@+id/listviewid"
        android:layout_marginTop="12dp"
        android:background="@drawable/backgraund_main_button"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/spin_cihazlar_nyenile"
        android:textColor="@android:color/background_light"
        tools:visibility="visible" />

    <ListView
        android:id="@+id/listviewid"
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:layout_below="@+id/button_bt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backgraund_mainaylaricon"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/spin_coater_cihaz_n_z_kaydediniz"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        tools:visibility="visible" />

</RelativeLayout>