<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    tools:context=".Comn">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/backgraund_main_label"
        android:fontFamily="@font/faster_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewNem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_HumTemp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bungee_inline"
        android:gravity="center"
        android:text="@string/nem_0"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNem"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bungee_inline"
        android:gravity="center"
        android:text="@string/s_cakl_k_0"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewHiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRpm"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bungee_inline"
        android:gravity="center"
        android:text="@string/h_z_0"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/cihaz_durumu"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewRpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_StartStop"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bungee_inline"
        android:gravity="center"
        android:text="@string/rpm_0"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_StartStop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textViewTemp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/backgraund_main_button"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/ba_lat"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_HumTemp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textViewdata"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/backgraund_main_button"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/humidity_temp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_HizKaydet"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText_Hiz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-1dp"
        android:background="@drawable/backgraund_main_label"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/h_z_kaydet"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_HizKaydet2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/seekBarHiz"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-1dp"
        android:layout_toStartOf="@+id/editText_Hiz"
        android:background="@drawable/backgraund_speedplus"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="-"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_HizKaydet3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/seekBarHiz"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/editText_Hiz"
        android:background="@drawable/backgraund_speedplus2"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="+"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editText_Hiz"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/seekBarHiz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_backgroundspeed"
        android:ems="10"
        android:fontFamily="@font/open_sans_bold"
        android:hint="@string/h_z_0_100"
        android:inputType="number"
        android:maxLength="3"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editText_ProTime"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/button_HizKaydet"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_backgroundalert"
        android:ems="10"
        android:fontFamily="@font/open_sans_bold"
        android:hint="@string/al_ma_s_resi_sn"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/checkBox_Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_HizKaydet"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/editText_ProTime"
        android:buttonTint="@android:color/holo_red_dark"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/zamanlay_c"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/seekBarHiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHiz"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progress"
        android:thumb="@drawable/thumb"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/seekBarTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_ProTime"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        android:progressDrawable="@drawable/progress"
        android:thumb="@drawable/thumb"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_terminal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:background="@drawable/backgraund_main_button"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/komut_penceresi"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/seekBarTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim2" />

</RelativeLayout>